// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusPill — status × mode snapshot matrix renders status=attention mode=dark 1`] = `
<View
  accessibilityLabel="Needs attention"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#E8B54F24",
        "borderColor": "#E8B54F59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#E8B54F",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#E8B54F",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#E8B54F",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Needs attention
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=attention mode=light 1`] = `
<View
  accessibilityLabel="Needs attention"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#E8B54F24",
        "borderColor": "#E8B54F59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#E8B54F",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#E8B54F",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#E8B54F",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Needs attention
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=clear mode=dark 1`] = `
<View
  accessibilityLabel="In their usual range"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#5FA97E24",
        "borderColor": "#5FA97E59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#5FA97E",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#5FA97E",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#5FA97E",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    In their usual range
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=clear mode=light 1`] = `
<View
  accessibilityLabel="In their usual range"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#5FA97E24",
        "borderColor": "#5FA97E59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#5FA97E",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#5FA97E",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#5FA97E",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    In their usual range
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=offline mode=dark 1`] = `
<View
  accessibilityLabel="No recent reading"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#918B8424",
        "borderColor": "#918B8459",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#918B84",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#918B84",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#918B84",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    No recent reading
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=offline mode=light 1`] = `
<View
  accessibilityLabel="No recent reading"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#918B8424",
        "borderColor": "#918B8459",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#918B84",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#918B84",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#918B84",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    No recent reading
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=sleeping mode=dark 1`] = `
<View
  accessibilityLabel="Sleeping"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#8F7FD424",
        "borderColor": "#8F7FD459",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#8F7FD4",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        null,
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#8F7FD4",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Sleeping
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=sleeping mode=light 1`] = `
<View
  accessibilityLabel="Sleeping"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#8F7FD424",
        "borderColor": "#8F7FD459",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#8F7FD4",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        null,
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#8F7FD4",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Sleeping
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=urgent mode=dark 1`] = `
<View
  accessibilityLabel="Urgent"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#E06A7C24",
        "borderColor": "#E06A7C59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#E06A7C",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#E06A7C",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#E06A7C",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Urgent
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=urgent mode=light 1`] = `
<View
  accessibilityLabel="Urgent"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#E06A7C24",
        "borderColor": "#E06A7C59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#E06A7C",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#E06A7C",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#E06A7C",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Urgent
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=watch mode=dark 1`] = `
<View
  accessibilityLabel="Watch"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#F2A61824",
        "borderColor": "#F2A61859",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#F2A618",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#F2A618",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#F2A618",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Watch
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=watch mode=light 1`] = `
<View
  accessibilityLabel="Watch"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#F2A61824",
        "borderColor": "#F2A61859",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#F2A618",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#F2A618",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#F2A618",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Watch
  </Text>
</View>
`;
